package it.mauluk92.sigill;

public enum Sigill {

    A,
    B
}
