package it.mauluk92.spell;

/**
 * Magic is just the will of the mind in other forms. The mind itself is everything,
 * can be its own hell or paradise, can chain or unbind, destroy or create.
 */

public interface Spell {

    Boolean trace();
}
